--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world from waqas</h1>
+    <p><a href="car.jpg">Google</a></p>
 </body>
 </html>
