--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p><a href="car.jpg">Google</a></p>
+    <p>Hello world<a href="car.jpg">image</a></p>
 </body>
 </html>
