--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world<a href="car.jpg">image</a></p>
+    <p>Hello world <a href="car.jpg">image</a></p>
+    <h1>deploy yamal</h1>
 </body>
 </html>
