--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Hello world <a href="car.jpg">image</a></p>
-    <h1>deploy yamal</h1>
+    <h1>deploy yaml</h1>
 </body>
 </html>
