no strech background image deploy

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<style>
-    body {
-        background-image:night.jpg ;
+    <style>
+        body {
+          background-image: url('night.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
         }
-</style>    
+        </style>    
 </head>
 <body>
     <p>Hello world <a href="car.jpg">image</a></p>
