--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </style>    
 </head>
 <body>
-    <p>Hello world <a href="car.jpg">image</a></p>
+    <p style="color:Tomato;">Dream night <a style="color:rgb(71, 255, 86);" href="car.jpg">Image</a></p>
     
 </body>
 </html>
